fix: change running string

--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
             </div>
           </div>
         </div>
-        <div class="runnig-string">
+        <div class="main__runnig-string-box">
           <div class="main__runnig-string">
             <div class="runnig-string__box">
               <img src="images/icons/star.svg" alt="star" /><img
@@ -565,95 +565,95 @@
       </section>
       <section class="webinars">
         <div class="webinars__bkg">
-          <div class="runnig-string">
+          <div class="webinars__runnig-string-box">
             <div class="webinars__runnig-string">
               <div class="runnig-string__box">
                 <img src="images/icons/star.svg" alt="star" /><img
                   src="images/running-string/Webinars.svg"
                   alt="webinars"
-                  class="runnig-string__text_webinars runnig-string__text_webinars"
+                  class="runnig-string__text_webinars"
                 /><img src="images/icons/star.svg" alt="star" /><img
                   src="images/running-string/Webinars.svg"
                   alt="webinars"
-                  class="runnig-string__text_webinars runnig-string__text_webinars"
+                  class="runnig-string__text_webinars"
                 /><img src="images/icons/star.svg" alt="star" /><img
                   src="images/running-string/Webinars.svg"
                   alt="webinars"
-                  class="runnig-string__text_webinars runnig-string__text_webinars"
+                  class="runnig-string__text_webinars"
                 /><img src="images/icons/star.svg" alt="star" /><img
                   src="images/running-string/Webinars.svg"
                   alt="webinars"
-                  class="runnig-string__text_webinars runnig-string__text_webinars"
+                  class="runnig-string__text_webinars"
                 /><img src="images/icons/star.svg" alt="star" /><img
                   src="images/running-string/Webinars.svg"
                   alt="webinars"
-                  class="runnig-string__text_webinars runnig-string__text_webinars"
+                  class="runnig-string__text_webinars"
                 /><img src="images/icons/star.svg" alt="star" /><img
                   src="images/running-string/Webinars.svg"
                   alt="webinars"
-                  class="runnig-string__text_webinars runnig-string__text_webinars"
+                  class="runnig-string__text_webinars"
                 /><img src="images/icons/star.svg" alt="star" />
                 <img
                   src="images/running-string/Webinars.svg"
                   alt="webinars"
-                  class="runnig-string__text_webinars runnig-string__text_webinars"
+                  class="runnig-string__text_webinars"
                 /><img src="images/icons/star.svg" alt="star" />
                 <img
                   src="images/running-string/Webinars.svg"
                   alt="webinars"
-                  class="runnig-string__text_webinars runnig-string__text_webinars"
+                  class="runnig-string__text_webinars"
                 /><img src="images/icons/star.svg" alt="star" />
                 <img
                   src="images/running-string/Webinars.svg"
                   alt="webinars"
-                  class="runnig-string__text_webinars runnig-string__text_webinars"
+                  class="runnig-string__text_webinars"
                 /><img src="images/icons/star.svg" alt="star" /><img
                   src="images/running-string/Webinars.svg"
                   alt="webinars"
-                  class="runnig-string__text_webinars runnig-string__text_webinars"
+                  class="runnig-string__text_webinars"
                 /><img src="images/icons/star.svg" alt="star" /><img
                   src="images/running-string/Webinars.svg"
                   alt="webinars"
-                  class="runnig-string__text_webinars runnig-string__text_webinars"
+                  class="runnig-string__text_webinars"
                 /><img src="images/icons/star.svg" alt="star" /><img
                   src="images/running-string/Webinars.svg"
                   alt="webinars"
-                  class="runnig-string__text_webinars runnig-string__text_webinars"
+                  class="runnig-string__text_webinars"
                 /><img src="images/icons/star.svg" alt="star" />
                 <img
                   src="images/running-string/Webinars.svg"
                   alt="webinars"
-                  class="runnig-string__text_webinars runnig-string__text_webinars"
+                  class="runnig-string__text_webinars"
                 /><img src="images/icons/star.svg" alt="star" />
                 <img
                   src="images/running-string/Webinars.svg"
                   alt="webinars"
-                  class="runnig-string__text_webinars runnig-string__text_webinars"
+                  class="runnig-string__text_webinars"
                 /><img src="images/icons/star.svg" alt="star" />
                 <img
                   src="images/running-string/Webinars.svg"
                   alt="webinars"
-                  class="runnig-string__text_webinars runnig-string__text_webinars"
+                  class="runnig-string__text_webinars"
                 /><img src="images/icons/star.svg" alt="star" />
                 <img
                   src="images/running-string/Webinars.svg"
                   alt="webinars"
-                  class="runnig-string__text_webinars runnig-string__text_webinars"
+                  class="runnig-string__text_webinars"
                 /><img src="images/icons/star.svg" alt="star" />
                 <img
                   src="images/running-string/Webinars.svg"
                   alt="webinars"
-                  class="runnig-string__text_webinars runnig-string__text_webinars"
+                  class="runnig-string__text_webinars"
                 /><img src="images/icons/star.svg" alt="star" />
                 <img
                   src="images/running-string/Webinars.svg"
                   alt="webinars"
-                  class="runnig-string__text_webinars runnig-string__text_webinars"
+                  class="runnig-string__text_webinars"
                 /><img src="images/icons/star.svg" alt="star" />
                 <img
                   src="images/running-string/Webinars.svg"
                   alt="webinars"
-                  class="runnig-string__text_webinars runnig-string__text_webinars"
+                  class="runnig-string__text_webinars"
                 /><img src="images/icons/star.svg" alt="star" />
               </div>
             </div>
