--- a/index.html
+++ b/index.html
@@ -1335,7 +1335,7 @@
           </div>
         </div>
       </footer>
-      <script src="main.js"></script>
+      <script src="main.js" type="module"></script>
     </div>
   </body>
 </html>
