--- a/index.html
+++ b/index.html
@@ -176,24 +176,18 @@
       <main class="main">
         <div class="wrap">
           <div class="main__container">
-            <picture>
-              <source
-                srcset="./images/png-pic/pic1.png"
-                media="(max-width: 800px)"
+            <figure class="main__pic-box">
+              <img
+                class="main__pic"
+                src="/images/picture/pic1.webp"
+                alt="girl with laptop"
               />
-              <figure class="main__pic-box">
-                <img
-                  class="main__pic"
-                  src="./images/png-pic/pic1.png"
-                  alt="girl with laptop"
-                />
-                <img
-                  class="main__stiker"
-                  src="images/png-pic/sticker1.svg"
-                  alt="gaming sticker"
-                />
-              </figure>
-            </picture>
+              <img
+                class="main__stiker"
+                src="images/picture/sticker1.svg"
+                alt="gaming sticker"
+              />
+            </figure>
             <div class="main__box">
               <ul class="main__article-switchers">
                 <li class="main__article-item main__article-item_active">
@@ -313,12 +307,12 @@
                 <picture class="articles__picture">
                   <img
                     class="articles__img articles__img_mask1"
-                    src="images//png-pic/pic2.png"
+                    src="images/picture/pic2.webp"
                     alt="articles img"
                   />
                 </picture>
                 <img
-                  src="images/png-pic/sticker2.svg"
+                  src="images/picture/sticker2.svg"
                   alt="stiker"
                   class="articles__stiker articles__stiker_lt"
                 />
@@ -364,12 +358,12 @@
                 <picture class="articles__picture">
                   <img
                     class="articles__img articles__img_inverted articles__img_mask2"
-                    src="images//png-pic/pic3.png"
+                    src="images/picture/pic3.webp"
                     alt="articles img"
                   />
                 </picture>
                 <img
-                  src="images/png-pic/sticker3.svg"
+                  src="images/picture/sticker3.svg"
                   alt="stiker"
                   class="articles__stiker articles__stiker_rt"
                 />
@@ -412,12 +406,12 @@
                 <picture class="articles__picture">
                   <img
                     class="articles__img articles__img_big articles__img_mask3"
-                    src="images//png-pic/pic4.png"
+                    src="images/picture/pic4.webp"
                     alt="articles img"
                   />
                 </picture>
                 <img
-                  src="images/png-pic/sticker3.svg"
+                  src="images/picture/sticker3.svg"
                   alt="stiker"
                   class="articles__stiker articles__stiker_md"
                 />
@@ -473,12 +467,12 @@
                 <picture class="articles__picture">
                   <img
                     class="articles__img articles__img_mask4"
-                    src="images//png-pic/pic5.png"
+                    src="images/picture/pic5.webp"
                     alt="articles img"
                   />
                 </picture>
                 <img
-                  src="images/png-pic/sticker4.svg"
+                  src="images/picture/sticker4.svg"
                   alt="stiker"
                   class="articles__stiker articles__stiker_lb"
                 />
@@ -519,12 +513,12 @@
                 <picture class="articles__picture">
                   <img
                     class="articles__img articles__img_mask5"
-                    src="images//png-pic/pic6.png"
+                    src="images/picture/pic6.webp"
                     alt="articles img"
                   />
                 </picture>
                 <img
-                  src="images/png-pic/sticker5.svg"
+                  src="images/picture/sticker5.svg"
                   alt="stiker"
                   class="articles__stiker articles__stiker_rb"
                 />
@@ -671,7 +665,7 @@
                     <picture>
                       <img
                         class="webinars__avatar"
-                        src="images/png-pic/avatar-default.svg"
+                        src="images/picture/avatar-default.svg"
                         alt="avatar"
                       />
                     </picture>
@@ -736,7 +730,7 @@
                     <picture>
                       <img
                         class="webinars__avatar"
-                        src="images/png-pic/avatar2.png"
+                        src="images/picture/avatar2.webp"
                         alt="avatar"
                       />
                     </picture>
@@ -801,7 +795,7 @@
                     <picture>
                       <img
                         class="webinars__avatar"
-                        src="images/png-pic/avatar3.png"
+                        src="images/picture/avatar3.webp"
                         alt="avatar"
                       />
                     </picture>
@@ -1002,7 +996,7 @@
                   </p>
                   <img
                     class="form__submitted-img"
-                    src="/images/png-pic/form-sticker.svg"
+                    src="/images/picture/form-sticker.svg"
                     alt="application accepted"
                   />
                 </div>
@@ -1011,7 +1005,7 @@
             <div class="form__letter">
               <img
                 class="form__letter-img"
-                src="images/png-pic/letter.svg"
+                src="images/picture/letter.svg"
                 alt="letter"
               />
             </div>
@@ -1222,7 +1216,7 @@
                 </a>
                 <img
                   class="footer__award"
-                  src="/images/icons/mark.png"
+                  src="/images/icons/mark.webp"
                   alt="award"
                 />
               </div>
